Fixed height issue on cockpit selector widget on ie11

--- a/knowage/src/main/webapp/themes/commons/css/SASS/components/_cockpitEngine.scss
+++ b/knowage/src/main/webapp/themes/commons/css/SASS/components/_cockpitEngine.scss
@@ -2339,4 +2339,9 @@
 			}
 		}
 	}    
+	cockpit-selector-widget {
+		.cockpitSelectorWidget {
+			height: 100%;
+		}
+	}
 }
